Fix help icon layout overlap for dropdownDescriptorSelector

--- a/src/main/scss/form/_layout.scss
+++ b/src/main/scss/form/_layout.scss
@@ -11,7 +11,7 @@
   text-wrap: pretty;
 }
 
-.jenkins-app-bar + .jenkins-page-description {
+.jenkins-app-bar+.jenkins-page-description {
   margin-top: -0.5rem;
 }
 
@@ -32,14 +32,15 @@
   // Workaround for float:right button controls
   // (eg Global Credentials' Verify Configuration button being hidden by the floating submit bar)
   &::after {
-    content: " "; /* Older browser do not support empty content */
+    content: " ";
+    /* Older browser do not support empty content */
     visibility: hidden;
     display: block;
     height: 0;
     clear: both;
   }
 
-  &--tight + .jenkins-form-item--tight {
+  &--tight+.jenkins-form-item--tight {
     margin-top: -0.9rem;
   }
 
@@ -140,7 +141,7 @@
 .jenkins-select-help a.jenkins-help-button {
   position: absolute;
   top: -3.7rem;
-  right: -2rem;
+  right: -2.5rem;
 }
 
 .jenkins-edited-section-label {
